# sonder

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/: release-please-config.json
.github/workflows/: ci.yml  cicd.yml
docs/: README.md
scripts/: setup_dev.py
src/sonder/: __init__.py  __main__.py  cli.py  main.py
src/sonder/analytics/: __init__.py
src/sonder/component/: __init__.py  ai.py  base.py  evolution.py  movement.py  player.py  stats.py
src/sonder/core/: __init__.py  config.py  game_loop.py  world.py
src/sonder/data/: __init__.py  __main__.py  database.py
src/sonder/entity/: __init__.py  base.py  frog.py  registry.py
src/sonder/system/: __init__.py  ai.py  base.py  movement.py
src/sonder/ui/: __init__.py  observer.py
tests/: test_basic.py
